<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
       >
    <data>
           <variable name="color" type="com.devmina.droid_ant.colorit.color_canvas.ColorViewModel"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@drawable/back">

        <com.devmina.droid_ant.colorit.color_canvas.MyCanvasView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/myCanvasView"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="24dp" android:layout_marginTop="60dp" android:layout_marginBottom="60dp"
                app:layout_constraintHorizontal_bias="0.97"/>


        <at.markushi.ui.CircleButton
                android:id="@+id/parentButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:cb_pressedRingWidth="8dip"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/clear"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:src="@drawable/candy"/>
        <Button
                android:layout_width="81dp"
                android:layout_height="48dp"
                android:background="@drawable/eraser"
                android:id="@+id/clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="100dp"/>

        <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp" app:srcCompat="@drawable/dol"
                android:id="@+id/img" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0" android:background="@color/backgroundColor"
                android:contentDescription="@string/color_image" />


       <!-- <ImageView
                android:layout_width="45dp"
                android:layout_height="47dp"
                android:id="@+id/save" app:srcCompat="@drawable/save"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/seekBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/parentButton" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.17"/> !-->

        <com.lukelorusso.verticalseekbar.VerticalSeekBar
                android:id="@+id/seekBar"
                android:layout_width="10dp"
                android:layout_height="200dp"
                app:vsb_click_to_set_progress="true"
                app:vsb_bar_corner_radius="15dp"
                app:vsb_bar_width="60dp"
                app:vsb_bar_background="#eeeeee"
                app:vsb_bar_progress_gradient_end="#FF0000"
                app:vsb_bar_progress_gradient_start="#FF0000"
                app:vsb_max_placeholder_position="inside"
                app:vsb_min_placeholder_position="inside"
                app:vsb_progress="30"
                app:vsb_show_thumb="true"
                app:vsb_thumb_container_tint="#000000"
                app:vsb_thumb_container_corner_radius="5dp"
                app:vsb_use_thumb_to_set_progress="true"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/img"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/myCanvasView" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.46" app:layout_constraintVertical_bias="0.666"/>
        <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/myCanvasView"
                android:layout_marginEnd="8dp">

            <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:orientation="vertical"
            >
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        android:id="@+id/yellow"
                        app:srcCompat="@drawable/p_yellow"
                        android:contentDescription="@string/yellow" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        app:srcCompat="@drawable/p_viol"
                        android:id="@+id/viol"
                        android:contentDescription="@string/viol" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        app:srcCompat="@drawable/p_red"
                        android:id="@+id/red"
                        android:contentDescription="@string/red" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        app:srcCompat="@drawable/p_purple"
                        android:id="@+id/purple"
                        android:contentDescription="@string/purple" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        app:srcCompat="@drawable/p_orange"
                        android:id="@+id/orange"
                        android:contentDescription="@string/orange" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        app:srcCompat="@drawable/p_green"
                        android:id="@+id/green"
                        android:contentDescription="@string/green" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pencil_size"
                        android:id="@+id/blue"
                        app:srcCompat="@drawable/p_blue"
                        android:contentDescription="@string/blue" />
                <!-- </androidx.core.widget.NestedScrollView> !-->

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <!--        app:vsb_thumb_placeholder_src="@drawable/thumb_placeholder" -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>